--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
 
 				</div>	
 			
+			<script src= "scripts/product.js"> </script>
 			
-			<script src= "scripts/pepeScript.js">
-
-			</script>
+			<script src= "scripts/pepeScript.js"> </script>
+			
+			<!--
+			<script src= "scripts/product.js"> </script>
+			The order of script loading does matters. If you load after the pepeScript.js, the webapge
+			will not work.
+			-->
 
 			
 			
